--- a/Frontend/app/package.json
+++ b/Frontend/app/package.json
@@ -16,13 +16,16 @@
     "socket.io-client": "^2.1.1"
   },
   "devDependencies": {
+    "gh-pages": "^5.0.0",
     "react-scripts": "2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
