--- a/Frontend/app/package.json
+++ b/Frontend/app/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://rituraj2023cn.github.io/react-chat-app"
   "name": "react_realtime_chat_app",
   "author": "Ashley Bibizadeh",
   "version": "0.1.0",
@@ -20,12 +21,12 @@
     "react-scripts": "2.1.1"
   },
   "scripts": {
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build"
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
